<?xml version="1.0"?>
<package>
  <name>schunk_svh_gazebo</name>
  <version>0.0.0</version>
  <description>The schunk_svh_gazebo package - modified by Antonio Di Guardo</description>

  <maintainer email="rodriguez@ais.uni-bonn.de">Diego Rodriguez</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>


</package>
